search and clear, dropdown-sort update